# css_dlc

./: .gitignore  CMakeLists.txt  Taskfile.yaml
css/: CMakeLists.txt
css/include/memory/: c_pattern.hpp
css/include/platform/: platform.hpp
css/src/: main.cpp
css/src/memory/: c_pattern.cpp
css/src/platform/: platform.cpp
test_bin/: CMakeLists.txt  main.cpp
